--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,10 @@
 
   <title>help</title>
   <link rel="manifest" href="manifest.json">
+  <script type="text/javascript"> window.flutterWebRenderer = "html"; </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwH3ULSxEp9znra6LNBioi4A944rRxMcY&libraries=drawing,visualization,places"></script>
+  <script>
+    <script src="flutter.js" defer></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
