--- a/web/index.html
+++ b/web/index.html
@@ -39,4 +39,28 @@
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyB6iQlTSW5kY24p8BkiypaSdJDdsEB6wDE",
+    authDomain: "authelp-59c85.firebaseapp.com",
+    databaseURL: "https://authelp-59c85-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "authelp-59c85",
+    storageBucket: "authelp-59c85.firebasestorage.app",
+    messagingSenderId: "79609830834",
+    appId: "1:79609830834:web:aa61f0f10f2a42eb9a18ab",
+    measurementId: "G-2HL5Z68SGP"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </html>
